@@ -5,7 +5,7 @@ pca.eigen <- function(X, ncomp, weights = NULL) {
   n <- zdim[1]
   p <- zdim[2]
   
-  #ncomp <- min(ncomp, p)
+  ncomp <- min(ncomp, n, p)
   
   if(is.null(weights))
     weights <- rep(1 / n, n)
@@ -17,7 +17,7 @@ pca.eigen <- function(X, ncomp, weights = NULL) {
 
   res <- eigen(crossprod(sqrt(weights) * X), symmetric = TRUE)
   P <- res$vectors[, 1:ncomp, drop = FALSE]
-  eig <- res$values  #[1:ncomp]
+  eig <- res$values[1:min(n, p)]
   eig[eig < 0] <- 0
   sv <- sqrt(eig)
 
