@@ -5,6 +5,8 @@ pca.eigenk <- function(X, ncomp, weights = NULL) {
   n <- zdim[1]
   p <- zdim[2]
   
+  ncomp <- min(ncomp, n, p)
+  
   if(is.null(weights))
     weights <- rep(1 / n, n)
   else
@@ -15,7 +17,7 @@ pca.eigenk <- function(X, ncomp, weights = NULL) {
 
   zX <- sqrt(weights) * X
   res <- eigen(tcrossprod(zX), symmetric = TRUE)
-  eig <- res$values    #[1:ncomp]
+  eig <- res$values[1:min(n, p)]
   eig[eig < 0] <- 0
   sv <- sqrt(eig)
   P <- crossprod(zX, .scale(res$vectors[, 1:ncomp, drop = FALSE], scale = sv[1:ncomp]))
