@@ -2,7 +2,7 @@ News for package rnirs
 
 ##----------------- Version 1.8-8
 
-- Re-organisation of some outputs in functions implementing discrimination.
+- Re-organisation of some outputs in discrimination functions.
 
 - Argument 'ncomp' added to functions scordis and odis.
 
@@ -10,7 +10,12 @@ News for package rnirs
 
 - Argument 'weights' added to function daglm.
 
-- In pca.eigen, ...: output 'eig' contains the full set of eigenvalues (not only the first 'ncomp')  
+- In pca.eigen, ...: output 'eig' contains the full set of eigenvalues (not only the first 'ncomp') 
+
+- New functions
+
+  plotjit
+  
 
 
 ##----------------- Version 1.8-7
